kubernetes/apps/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: bazarr
  labels:
    app: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: ghcr.io/hotio/bazarr:release-1.5.5
          ports:
            - containerPort: 6767
              protocol: TCP
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /synology
              name: media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: media
          persistentVolumeClaim:
            claimName: pvc-bazarr-synology
