kubernetes/apps/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: bazarr
  labels:
    app: bazarr
spec:
  type: ClusterIP
  ports:
    - port: 6767
      targetPort: 6767
      protocol: TCP
      name: http
  selector:
    app: bazarr
