kubernetes/apps/bazarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: bazarr
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`subs.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
  tls: {}
